--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="alternate icon" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>GitMarket - Bounties for GitHub Issues</title>
   </head>
   <body>
     <div id="root"></div>
